// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionButtons/> should render the action buttons if isEditing is set to false 1`] = `
<div>
  <span
    class="actionButtons group horizontal"
  >
    <button
      class="wrapper actionButton fill secondary small left"
      type="button"
    >
      I am in snapshots
    </button>
    <button
      class="wrapper actionButton fill secondary small right"
      type="button"
    >
      I am in snapshots too
    </button>
  </span>
</div>
`;

exports[`<ActionButtons/> should render the editor if isEditing is set to true  1`] = `
<ul
  class="editList"
>
  <li
    class="editRow"
  >
    <button
      class="wrapper fill secondary small"
      type="button"
    >
      I am in snapshots
    </button>
    <span
      class="editIcons"
    >
      <i
        class="material-icons"
      >
        edit
      </i>
      <i
        class="material-icons text-danger"
      >
        delete
      </i>
    </span>
  </li>
  <li
    class="editRow"
  >
    <button
      class="wrapper fill secondary small"
      type="button"
    >
      I am in snapshots too
    </button>
    <span
      class="editIcons"
    >
      <i
        class="material-icons"
      >
        edit
      </i>
      <i
        class="material-icons text-danger"
      >
        delete
      </i>
    </span>
  </li>
</ul>
`;
